--- a/web/index.html
+++ b/web/index.html
@@ -27,10 +27,10 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png"/>
-  <link rel="icon" type="image/png" sizes="192x192" href="icons/Icon-192.png"/>
-  <link rel="icon" type="image/png" sizes="512x512" href="icons/Icon-512.png"/>
+  <link rel="icon" type="image/svg+xml" href="/InduScore/favicon.svg"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="/InduScore/favicon.png"/>
+  <link rel="icon" type="image/png" sizes="192x192" href="/InduScore/icons/Icon-192.png"/>
+  <link rel="icon" type="image/png" sizes="512x512" href="/InduScore/icons/Icon-512.png"/>
 
   <title>InduScore - Notenverwaltung</title>
   <link rel="manifest" href="manifest.json">
